--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.kotlin_version = "1.3.72"
+
+    /*
+    dokkaの1.4.xには以下のバグがあるため、今は0.10.0が安定していて使いやすい
+    ・ @suppressを除外しない
+    https://github.com/Kotlin/dokka/issues/1612
+    ・equals、hashCode、toStringなどの自動生成される関数がドキュメントに含まれる
+    https://github.com/Kotlin/dokka/issues/1613
+     */
+    ext.dokka_version = '0.10.0'
     repositories {
         google()
         jcenter()
@@ -9,8 +18,7 @@ buildscript {
         classpath "com.android.tools.build:gradle:4.1.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath "org.jetbrains.dokka:dokka-gradle-plugin:$dokka_version"
     }
 }
 
